tests/negative/class/class_super_outside.tx
// EXPECTED: COMPILE_ERROR
// Description: Test super outside of class.

function main() {
    super(); // Error: super outside of class
}
